unpackaged/main/default/objects/project_cloud__Requirement_Area__c/project_cloud__Requirement_Area__c.object-meta.xml
<CustomObject>
    <label>Requirement Area</label>
    <nameField>
        <label>Requirement Area Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Requirement Areas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>