unpackaged/main/default/objects/project_cloud__Requirement_Area__c/fields/project_cloud__Hash__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Hash__c</fullName>
    <formula>IF(
  NOT(ISBLANK(project_cloud__Parent__r.project_cloud__Parent__r.Name)),
  IF(
    NOT(ISBLANK(project_cloud__Parent__r.Name)),
    project_cloud__Parent__r.project_cloud__Parent__r.Name &amp; &#39;|&#39; &amp; project_cloud__Parent__r.Name &amp; &#39;|&#39; &amp; Name,
    NULL
  ),
  IF(
    NOT(ISBLANK(project_cloud__Parent__r.Name)),
    project_cloud__Parent__r.Name &amp; &#39;|&#39; &amp; Name,
    Name
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field helps detect and prevent duplicates</inlineHelpText>
    <label>Hash</label>
    <type>Text</type>
</CustomField>