unpackaged/main/default/objects/project_cloud__Requirement_Area__c/fields/project_cloud__Parent__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This lookup allows for requirement areas to be related to one another</inlineHelpText>
    <label>Parent</label>
    <referenceTo>project_cloud__Requirement_Area__c</referenceTo>
    <relationshipLabel>Requirement Areas (Parent)</relationshipLabel>
    <relationshipName>Requirement_Areas</relationshipName>
    <type>Lookup</type>
</CustomField>