unpackaged/main/default/objects/project_cloud__Requirement_Area__c/fields/project_cloud__Project__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Project__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>The Project that this Requirement Area is associated with</inlineHelpText>
    <label>Project</label>
    <referenceTo>project_cloud__Project__c</referenceTo>
    <relationshipLabel>Requirement Areas</relationshipLabel>
    <relationshipName>Requirement_Areas</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>